fix for puzzle preview being too light (caused by hover)

--- a/src/frontend/style.scss
+++ b/src/frontend/style.scss
@@ -549,6 +549,7 @@ kbd {
       bottom: 20px;
       right: 20px;
       position: absolute;
+      z-index: 100;
 
       .img {
         height: 100%;
